--- a/style/style.css
+++ b/style/style.css
@@ -6,13 +6,14 @@
 body{
     width: 100vw;
     height: 100vh;
+    display: flex;
 }
 header{
     
     width: 320px;
     height: 100vh;
     padding: 20px 0 20px 0;
-    background-color: #100;
+    background-color: #1c1c1c;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -59,6 +60,17 @@ ul>li:hover{
     color:#fff;
     
 }
+.fecharHeader , .abrirHeader{
+    position: fixed;
+    left: 260px;
+    color: #fff;
+}
+.fecharHeader{
+    display: non;
+}
+.abrirHeader{
+    display: none;
+}
 .none{
     display: none;
 }
@@ -83,3 +95,80 @@ ul>li:hover{
     border-radius: 5px;
     background-color: #ff00009a;
 }
+
+main{
+    /* border: solid 1px red; */
+    width: 85vw;
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+}
+.container-search{
+    margin: 0 0 30px 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+.containerIconSearch{
+    width: 45px;
+    height: 45px;
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 80%;
+}
+#search{
+    margin-left: 10px;
+    outline: none;
+    width: 70%;
+    height: 35px;
+    display: one;
+}
+.container-categorias {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 8px;
+}
+    
+.section3 {
+    display: flex;
+    justify-content: space-evenly;
+    grid-column: span 5 / span 5;
+    grid-column-start: 1;
+    grid-row-start: 2;
+}
+.section1 {
+    grid-column: span 3 / span 3;
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+
+.section2 {
+    display: flex;
+    justify-content: end;
+    grid-column: span 2 / span 2;
+    grid-column-start: 4;
+    grid-row-start: 1;
+}
+.section2>h3{
+    width: 120px;
+    height: 30px;
+    color: #80808098;
+}
+.imgBurguer{
+    width: 95%;
+    height: 100%;
+}
+.categoria1{
+    border-radius: 100%;
+    width: 8%;
+    height: 80%;
+    text-align: center;
+    background-image: radial-gradient(circle at center, #1c1c1c , #4e4e4e);
+}
+        
