--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,184 @@ main{
     flex-direction: column;
     /* justify-content: space-around; */
 }
+.container-carrinho{
+    width: 22%;
+    height: 95vh;
+    border-radius: 14px;
+    padding: 10px;
+    position: fixed;
+    right: 13px;
+    background-color: #1c1c1c;
+    display: flex;
+    visibility: hidden;
+    flex-direction: column;
+
+}
+.header-carrinho{
+    width: 100%;
+    height: 17%;
+    padding: 5px 5px 5px 16px;
+    border-radius: 10px;
+    background-color: #686868d5;
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+}
+.infos{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+}
+.header-carrinho>h1{
+    font-size: 1.8rem;
+    color: #fff;
+}
+.infoPedido> .infoLocal , .infoTempo{
+    margin: none;
+    font-size: 1em;
+    color: #ffffffd0;
+}
+.infoLocal , .infoTempo>i{
+    margin-right: 10px;
+}
+.main-carrinho{
+    width: 100%;
+    height: 35%;
+    max-height: 80;
+    padding: 5px 5px 5px 16px;
+    background-color: #4e4e4e;
+    border-radius: 10px 0px 0px;
+}
+.article-carrinho{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.article-carrinho>span>.icon-article , .orderId{
+    color: #fff;
+}
+
+.main-pedido1{
+    width: 100%;
+    height: 35%;
+    padding: 10px;
+    border-bottom: solid 1px #1c1c1c;
+    display: flex;
+    justify-content: space-between;
+}
+.main-pedido1>img{
+    width: 80px;
+    height: 80px;
+}
+.infoPedido{
+    width: 80%;
+    height: 70px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.infoPedido>.titlePedido{
+    width: 100%;
+    height: 20px;
+    margin: 5px;
+}
+.btnsPedido{
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+.btnsPedido> button{
+    width: 25px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+}
+#QtdPedido{
+    color: #fff;
+}
+
+.footer-carrinho{
+    width: 100%;
+    height: 60%;
+    /* margin-top: 15px; */
+    border-radius: 0px 0px 10px 10px;
+    padding: 10px;
+    background-color: #4e4e4e;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+.promotion{
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    padding: 0px;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.promotionCode{
+    color: #fff;
+    margin: 0px 40px 0px 0px;
+    border-radius: 10px;
+    width: 70%;
+    height: 90%;
+    padding: 5px;
+    cursor: pointer;
+}
+.promotionCode:hover{
+    border: solid 2px #fff;
+}
+.payMe:hover{
+    border: solid 2px #fff;
+}
+.payMe{
+    cursor: pointer;
+    width: 50%;
+    padding: 3px;
+    border-radius: 10px;
+    margin: 0px 0px 0px 40px;
+    height: 90%;
+    color: #fff;
+    margin: 0px;
+}
+.infoComprar{
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    width: 100%;
+    height: 45%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+#SubTotal{
+    color: #fff;
+    width: 100%;
+    height: 40px;
+    margin: 0px;
+}
+#CustoEntrega{
+    /* border: solid 1px red; */
+    color: #fff;
+    margin: 0px 0px 10px 0px;
+}
+.secaoValores{
+    display: flex;
+    justify-content: space-between;
+}
+#IdTotal{
+    color: #fff;
+}
+#valorTotal{
+    font-size: 2rem;
+    color: #fff;
+}
 .container-search{
     margin: 0 0 30px 0;
     width: 100%;
@@ -129,46 +307,102 @@ main{
     display: one;
 }
 .container-categorias {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 8px;
-}
-    
-.section3 {
-    display: flex;
-    justify-content: space-evenly;
-    grid-column: span 5 / span 5;
-    grid-column-start: 1;
-    grid-row-start: 2;
-}
-.section1 {
-    grid-column: span 3 / span 3;
-    grid-column-start: 1;
-    grid-row-start: 1;
+    width: 100%;
+    height: 20%;
+    padding: 10px;
 }
 
-.section2 {
+.header-categorias{
+    padding: 5px;
+    width: 100%;
+    height: 30%;
     display: flex;
-    justify-content: end;
-    grid-column: span 2 / span 2;
-    grid-column-start: 4;
-    grid-row-start: 1;
+    justify-content: space-between;
+    align-items: center;
 }
-.section2>h3{
-    width: 120px;
-    height: 30px;
-    color: #80808098;
+.section-categorias{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.section-categorias>h1{
+    font-size: 1.7rem;
+}
+.section-categorias>i{
+    color: #4e4e4e;
+}
+.header-categorias>section>h3{
+    color: #4e4e4eb7;
+}
+
+.main-categorias{
+    width: 100%;
+    display: flex;
+}
+.categoria1 , .categoria2{
+    margin-left: 10px;
+    border-radius: 100%;
+    background-color: #4e4e4e;
+}
+.container-produtos{
+    padding: 10px;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.header-produtos{
+    padding: 5px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.title-produtos{
+    display: flex;
+    align-items: center;
+}
+.title-produtos>h1{
+    font-size: 1.7rem;
+}
+.section-categorias>i{
+    color: #4e4e4e;
+}
+.header-categorias>section>h3{
+    color: #4e4e4eb7;
 }
 .imgBurguer{
-    width: 95%;
-    height: 100%;
+    width: 80px;
 }
-.categoria1{
-    border-radius: 100%;
-    width: 8%;
-    height: 80%;
-    text-align: center;
-    background-image: radial-gradient(circle at center, #1c1c1c , #4e4e4e);
+.imgBurguer1{
+    width: 160px;
+    position: relative;
+    top: -65px;
+    left:8px;
 }
-        
+.produto1{
+    margin-top: 60px;
+    padding: 5px;
+    width: 200px;
+    height: 90px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #4e4e4e;
+}
+.produto1>button{
+    width: 100%;
+    height: 30px;
+    position: relative;
+    top: -40px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
+    background-color: #ff00009a;
+}
+.produto1>button:hover{
+    background-color: #1c1c1c;
+    color: #ff00009a;
+}
